--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "vite": "^4.4.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
