--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
+    "react-icons": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
