--- a/package.json
+++ b/package.json
@@ -6,22 +6,12 @@
   "description": "A full stack JavaScript solo project.",
   "type": "module",
   "scripts": {
-    "start": "NODE_ENV=production npm start --prefix server",
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "npm run build --prefix client",
-    "db:import": "sh database/import.sh",
-    "dev:client": "npm run dev --prefix client",
-    "dev:server": "npm run dev --prefix server",
-    "dev": "npm-run-all --parallel --print-label dev:*",
-    "install:client": "npm install --prefix client",
-    "install:server": "npm install --prefix server",
-    "install:env": "test -f server/.env || cp server/.env.example server/.env",
-    "postinstall": "npm-run-all --parallel install:*",
-    "lint:client": "npm run lint --prefix client",
-    "lint:server": "npm run lint --prefix server",
-    "lint": "npm-run-all --parallel lint:*",
-    "prepare": "husky install"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
