--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "description": "A full stack JavaScript solo project.",
   "type": "module",
   "scripts": {
+    "start": "NODE_ENV=production npm start --prefix server",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "build": "npm run build --prefix client"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -16,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
+    "react-icons": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
